traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:5: error: '=' expected but '(' found.
def posFinale:Boolean() ={
                     ^TraversalByColumn:21: error: illegal start of simple expression
override def run() {
^